k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-preassessment
  namespace: loan-preassessment
spec:
  selector:
    app: loan-preassessment
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
